--- a/cfn/template/awesome-blog-stateful-cloudfront.template.yaml
+++ b/cfn/template/awesome-blog-stateful-cloudfront.template.yaml
@@ -2,6 +2,15 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: CloudFront for awesome-blog
 
 Parameters:
+  ServiceName:
+    Type: String
+    Default: 'awesome-blog'
+  Environment:
+    Type: String
+    AllowedValues:
+      - dev
+      - stg
+      - prd
   S3BucketWebDomainName:
     Type: String
 
