--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ secrets.AWS_DEPLOYMENT_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ap-northeast-1
 
       - id: upload
         name: Upload
