--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -90,7 +90,7 @@ jobs:
         name: AWS CloudFormation "Create stateful stack"
         uses: aws-actions/aws-cloudformation-github-deploy@v1.0.3
         with:
-          name: 'awesome-blog-${{ steps.prepare.outputs.short-region-name }}-${{ env.ENVIRONMENT }}-s3'
+          name: 'awesome-blog-${{ steps.prepare.outputs.short-region-name }}-${{ env.ENVIRONMENT }}-stateful'
           template: awesome-blog-s3.template.yaml
           no-fail-on-empty-changeset: "1"
           parameter-overrides: >-
