--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,7 +91,7 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1.0.3
         with:
           name: 'awesome-blog-${{ steps.prepare.outputs.short-region-name }}-${{ env.ENVIRONMENT }}-stateful'
-          template: awesome-blog-s3.template.yaml
+          template: awesome-blog-stateful.template.yaml
           no-fail-on-empty-changeset: "1"
           parameter-overrides: >-
             ServiceName=awesome-blog,
