--- a/openapi/backend-api.yaml
+++ b/openapi/backend-api.yaml
@@ -36,6 +36,16 @@ paths:
       responses:
         200:
           description: Success
+          headers:
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -46,6 +56,8 @@ paths:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
         passthroughBehavior: "when_no_match"
         httpMethod: "POST"
